[gd_scene load_steps=2 format=3 uid="uid://coml4i5p12i3s"]

[ext_resource type="Script" uid="uid://weihnulnl81x" path="res://game_level.gd" id="1_bwyfi"]

[node name="GameLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bwyfi")

[node name="TableArea" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 200.0
offset_right = 50.0
offset_bottom = 240.0

[node name="CurrentDishLabel" type="Label" parent="TableArea"]
layout_mode = 2
text = "Empty"

[node name="IngredientsArea" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 50.0
offset_right = 763.0
offset_bottom = 151.0

[node name="Btn_Pita" type="Button" parent="IngredientsArea"]
layout_mode = 2
text = "Лаваш"

[node name="Btn_Meat" type="Button" parent="IngredientsArea"]
layout_mode = 2
text = "М'ясо"

[node name="Btn_Sauce" type="Button" parent="IngredientsArea"]
layout_mode = 2
text = "Соус"

[node name="Btn_Cucumber" type="Button" parent="IngredientsArea"]
layout_mode = 2
text = "Огірок"

[node name="Btn_Tomato" type="Button" parent="IngredientsArea"]
layout_mode = 2
text = "Помідор
"

[node name="Btn_Cheese" type="Button" parent="IngredientsArea"]
layout_mode = 2
text = "Сир"

[node name="CustomerArea" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 156.0
offset_bottom = 54.0

[node name="OrderLabel" type="Label" parent="CustomerArea"]
layout_mode = 2
text = "Чекаю замовлення"

[node name="PatienceBar" type="ProgressBar" parent="CustomerArea"]
layout_mode = 2

[node name="Btn_Serve" type="Button" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 300.0
offset_right = 572.0
offset_bottom = 331.0
text = "Віддати"

[node name="Btn_Restart" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 450.0
offset_top = 250.0
offset_right = 615.0
offset_bottom = 281.0
text = "Спробувати ще раз"

[node name="HighscoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_right = 556.0
offset_bottom = 23.0
text = "Рекорд: 0"

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 100.0
offset_right = 448.0
offset_bottom = 123.0
theme_override_colors/font_color = Color(1, 0.78431374, 0.23137255, 1)
